Fix wrong fonts

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -8,7 +8,9 @@
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
 //    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
-@include mat.all-legacy-component-typographies();
+@include mat.all-legacy-component-typographies(
+    mat.define-legacy-typography-config($font-family: "OSFont, Fira Sans, Roboto, Arial, Helvetica, sans-serif")
+);
 @include mat.legacy-core();
 
 /** theming */
